--- a/pom.xml
+++ b/pom.xml
@@ -96,14 +96,14 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://54.255.174.111:8081/repository/flipkart-release/</url>
+	      <name>citibank release</name>
+	      <url>http://13.127.187.174:8081/repository/Citibank-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://54.255.174.111:8081/repository/flipkart-snapshot/</url>
+	      <name>citibank snapshot </name>
+	      <url>http://13.127.187.174:8081/repository/Citibank-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
